# research-agent-vscode

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
examples/: sample_run.sh
src/research_agent/: __init__.py  agent.py  exporters.py  utils.py
src/research_agent/sources/: __init__.py  arxiv_source.py  core_source.py  crossref_source.py  dblp_source.py  doaj_source.py  hal_source.py  ieee_source.py  openalex_source.py  pubmed_source.py  scopus_source.py
tests/: test_smoke.py
