[project]
name = "research-agent-vscode"
version = "0.1.0"
description = "Free scientific article finder (OpenAlex + arXiv), per-paper JSON, optional local LLM reranking"
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
